exports[`test renders a \`span\` correctly 1`] = `
<span>
  <span>
    Hello World!
  </span>
</span>
`;

exports[`test renders a \`strong\` correctly 1`] = `
<span>
  <strong>
    Hello World!
  </strong>
</span>
`;

exports[`test renders the right title 1`] = `
<h3>
  Component Title
</h3>
`;
